Update for toolbar

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -47,3 +47,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/polymer-firebase-login-buttons/google-login-button.html">
 <link rel="import" href="../bower_components/polymer-firebase-login-buttons/facebook-login-button.html">
 <link rel="import" href="../bower_components/polymer-firebase-login-buttons/twitter-login-button.html">
+<link rel="import" href="pain-rate-data/pain-rate-data.html">
