--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -28,9 +28,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 
 <!-- Google elements -->
+<link rel="import" href="../bower_components/firebase-element/firebase.html">
 <link rel="import" href="../bower_components/firebase-element/firebase-auth.html">
+<link rel="import" href="../bower_components/firebase-element/firebase-document.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
@@ -48,3 +51,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/polymer-firebase-login-buttons/facebook-login-button.html">
 <link rel="import" href="../bower_components/polymer-firebase-login-buttons/twitter-login-button.html">
 <link rel="import" href="pain-rate-data/pain-rate-data.html">
+<link rel="import" href="../bower_components/rating-system/rating-system.html">
+<link rel="import" href="../bower_components/grid-style/grid.html">
+<link rel="import" href="../bower_components/polymer-firebase-collection-input/polymer-firebase-collection-input.html">
