--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -107,6 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color: var(--text-primary-color);
       font-weight: bold;
       font-size: 18px;
+      z-index: 100;
 
     };
 
@@ -116,6 +117,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     color: var(--accent-color);
   
+  }
+
+  .top-mar-1 {
+
+    margin-top: 1em;
+
   }
 
   .login-buttons {
@@ -131,9 +138,47 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   }
 
-  .login-card-container {
+  .card-container {
 
     text-align: center;
+    margin-bottom: 1em;
+    margin-top: 0.5em;
+
+  }
+
+  paper-input {
+
+    text-align: left;
+    width: 99%;
+    margin-bottom: 3em;
+
+  }
+
+  paper-button {
+
+    min-width: 20%;
+    margin-top: 3em;
+    font-weight: bold;
+
+  }
+
+  .rating-card-container {
+
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+
+  .rating-system-container {
+
+    padding: 2em;
+
+  }
+
+  .rating-card {
+
+    min-width: 80%;
+    max-width: 98%;
 
   }
 
@@ -143,22 +188,80 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   }
 
+  .settings-card {
+
+    min-width: 80%;
+    max-width: 98%;
+
+  }
+
+  .chart-card {
+
+    min-width: 80%;
+    max-width: 98%;
+
+  }
+
+  .settings-content-wrapper {
+
+    padding-top: 1.0em;
+    margin-left: 0.5em;
+    margin-bottom: 1.5em;
+    text-align: left;
+
+  }
+
+  .rating-system-head {
+
+    text-align: left;
+    font-weight: bold;
+    font-size: 1.25em;
+
+  }
+
+  .list-select-head {
+
+    text-align: left;
+    font-weight: bold;
+    font-size: 1.25em;
+    margin-left: 1.6em;
+    margin-top: 1.5em;
+
+  }
+
   .login-header {
 
     margin-top: 1em;
     margin-left: 1em;
     font-size: 1.5em;
-    font-weight: bold;
     text-align: left;
+
+  }
+
+  .error {
+
+    color: var(--accent-color);
 
   }
 
   paper-toolbar.tall .app-name {
     font-size: 40px;
-    font-weight: 300;
     /* Required for main area's paper-scroll-header-panel custom condensing transformation */
     -webkit-transform-origin: left center;
     transform-origin: left center;
+  }
+
+  simple-login-nav-button {
+
+    position: relative;
+
+  }
+
+  .tab-bar {
+
+    /*position:fixed;*/
+    width:100%;
+
   }
 
   #mainToolbar .middle-container  {
@@ -180,7 +283,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   /* Height of the scroll area */
   .content {
+    margin-top: 1em;
     height: 900px;
+  }
+
+  paper-dropdown-menu {
+
+    float: left;
+    margin-left: 1.75em;
+    width: 100%;
+
+  }
+
+  paper-tabs {
+
+    position: fixed;
+
+  }
+
+  .category-error {
+
+    float: left;
+    margin-top: 2.5em;
+
   }
 
   /* Breakpoints */
@@ -215,6 +340,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     .bg {
       background: white;
     }
+
+    .settings-card {
+
+      width: 95%;
+
+    }
+
+    .chart-card {
+
+      width: 95%;
+
+    } 
 
   }
 
