Getting ready to deploy

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -29,6 +29,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bower_components/polymer-simple-dropdown/polymer-simple-dropdown.html">
+<link rel="import" href="../bower_components/paper-date-picker/paper-date-picker.html">
 
 <!-- Google elements -->
 <link rel="import" href="../bower_components/firebase-element/firebase.html">
