--- a/app/elements/pain-rate-data/pain-rate-data.html
+++ b/app/elements/pain-rate-data/pain-rate-data.html
@@ -38,7 +38,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           firebaseUrl: {
 
             type: String,
-            value: '<app-name>.firebaseIO.com',
+            value: '<Your-App>.firebaseIO.com',
             reflectToAttribute: true,
             notify: true,
             readOnly: true
@@ -58,7 +58,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             case 1:
 
-              page.redirect( '/chart' );
+              page.redirect( '/summary' );
               break;
 
              case 2:
