--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -195,10 +195,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   }
 
-  .chart-card {
+  .summary-card {
 
     min-width: 80%;
     max-width: 98%;
+    margin-top: 2em;
+
+  }
+
+  .summary-button-container {
+
+    margin-bottom: 1.5em;
+
+  }
+
+  .summary-card-wrapper {
+
+    padding-top: 1.0em;
+    margin-left: 0.5em;
+    margin-bottom: 1.5em;
+    text-align: left;
+    word-wrap: break-word;
 
   }
 
@@ -219,13 +236,33 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   }
 
-  .list-select-head {
+  .summary-head {
+
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.5em;
+    padding-left: 1em;
+    padding-top: 1em;
+    margin-bottom: 1em;
+
+  }
+
+  .summary-title {
 
     text-align: left;
     font-weight: bold;
     font-size: 1.25em;
-    margin-left: 1.6em;
-    margin-top: 1.5em;
+    padding-left: 1em;
+    padding-top: 1em;
+    margin-bottom: 2em;
+
+  }
+
+  .date-picker-head {
+
+    text-align: left;
+    font-weight: bold;
+    font-size: 1.25em;
 
   }
 
@@ -238,8 +275,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   }
 
+  .date-picker-container {
+
+    margin-top: 1em;
+    text-align: left;
+    margin-left: 2.1em;
+    margin-bottom: 1em;
+
+  }
+
   .error {
 
+    font-weight: bold;
     color: var(--accent-color);
 
   }
@@ -287,24 +334,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     height: 900px;
   }
 
-  paper-dropdown-menu {
-
-    float: left;
-    margin-left: 1.75em;
-    width: 100%;
-
-  }
-
   paper-tabs {
 
     position: fixed;
-
-  }
-
-  .category-error {
-
-    float: left;
-    margin-top: 2.5em;
 
   }
 
@@ -347,7 +379,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     }
 
-    .chart-card {
+    .summary-card {
 
       width: 95%;
 
