--- a/app/elements/pain-rate-data/pain-rate-data.html
+++ b/app/elements/pain-rate-data/pain-rate-data.html
@@ -38,7 +38,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           firebaseUrl: {
 
             type: String,
-            value: '<Your app>.firebaseIO.com',
+            value: '<Your-App>.firebaseIO.com',
             reflectToAttribute: true,
             notify: true,
             readOnly: true
