Updated to happy-rating

--- a/app/index.html
+++ b/app/index.html
@@ -159,8 +159,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
                     </div>
 
-                    <rating-system happy-icon="social:mood" sad-icon="social:mood-bad" okay-icon="face" 
-                    rating="{{rating}}" disabled="[[!user]]"></rating-system>
+                    <happy-rating happy-icon="social:mood" sad-icon="social:mood-bad" okay-icon="face" 
+                    rating="{{rating}}" disabled="[[!user]]"></happy-rating>
 
                     <paper-button disabled$=[[!user]] on-click="rate" raised>Rate It</paper-button>
 
